--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>opal peltzman</title>
     <h2>exercises:</h2>
-    <a href="exercises/ex1/index.html">
+    <a href="exercises/exe1/index.html">
         <h3>first exercise</h3>
     </a>
 </head>
