--- a/exercises/ex2/index1.html
+++ b/exercises/ex2/index1.html
@@ -12,10 +12,16 @@
     </header>
 
     <section class="galery">
-        <img src="images/p1.png">
-        <img class="pic" src="images/p2.png">
-        <img class="pic" src="images/p3.png">
-        <img class="pic" src="images/p4.png">
+            <img src="images/p1.png">
+        <div class="pic">
+            <img src="images/p2.png">
+        </div>
+        <div class="pic">
+            <img src="images/p3.png">
+        </div>
+        <div class="pic">
+            <img src="images/p4.png">
+        </div>
     </section>
 
     <h1 class="innerpageh1">NEW YORK<span>USA<span></h1>
