--- a/exercises/ex2/index.html
+++ b/exercises/ex2/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-    <link href="https://fonts.googleapis.com/css2?family=Carter+One&family=Open+Sans&family=Roboto:wght@300&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Carter+One&family=Open+Sans&family=Roboto:wght@300&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="favicon1.ico">
     <title>opal peltzman</title>
 </head>
+
 <body>
     <header>
         <a href="index.html">SHENKAR TOURS</a>
@@ -17,26 +21,26 @@
 
     <main class="pictures">
         <section class="frame">
-            <img src="images/cet.png"/>
+            <img src="images/cet.png" />
             <section class="card">
                 <nav><a href="index1.html">The Adventure</a></nav>
-            </section> 
+            </section>
         </section>
 
         <section class="frame">
-            <img src="images/cet.png"/>
+            <img src="images/cet.png" />
             <section class="card">
                 <nav><a href="index1.html">The Adventure</a></nav>
-            </section> 
+            </section>
         </section>
 
         <section class="frame">
-            <img src="images/cet.png"/>
+            <img src="images/cet.png" />
             <section class="card">
                 <nav><a href="index1.html">The Adventure</a></nav>
-            </section> 
+            </section>
         </section>
-    </main> 
+    </main>
     <footer>
         <nav class="footer1">
             <li><a class="twitter" href="https://twitter.com/login"></a></li>
@@ -46,4 +50,5 @@
         </nav>
     </footer>
 </body>
+
 </html>
