--- a/exercises/ex2/index1.html
+++ b/exercises/ex2/index1.html
@@ -39,7 +39,7 @@
         <section class="sectionsSet">
             <p id="firstP">New York City comprises 5 boroughs sitting
                where the Hudson River meets the Atlantic Ocean. At its core is Manhattan,
-               a densely populated borough that’s among </p>
+               a densely populated borough that&apos;s among </p>
         </section>
 
         <section>
@@ -53,7 +53,7 @@
         <section class="sectionsSet">
             <h2 id="secondP">SECTION 2</h2>
             <p>New York City comprises 5 boroughs sitting where the Hudson River meets the Atlantic Ocean.
-               At its core is Manhattan, a densely populated borough that’s among the world’s major commercial,
+               At its core is Manhattan, a densely populated borough that&apos;s among the world&apos;s major commercial,
                financial and cultural centers. Its iconic sites include skyscrapers such as the Empire State Building
                and sprawling Central Park. Broadway theater is staged in neon-lit Times Square.</p>
         </section>
@@ -61,7 +61,7 @@
         <section class="sectionsSet">
             <h2 id="thirdP">SECTION 3</h2>
             <p>New York City comprises 5 boroughs sitting where the Hudson River meets the Atlantic Ocean.
-               At its core is Manhattan, a densely populated borough that’s among the world’s major commercial,
+               At its core is Manhattan, a densely populated borough that&apos;s among the world&apos;s major commercial,
                financial and cultural centers. Its iconic sites include skyscrapers such as the Empire State Building
                and sprawling Central Park. Broadway theater is staged in neon-lit Times Square.</p>
         </section>
@@ -69,7 +69,7 @@
         <section class="sectionsSet">
             <h2 id="fourthP">SECTION 4</h2>
             <p>New York City comprises 5 boroughs sitting where the Hudson River meets the Atlantic Ocean.
-               At its core is Manhattan, a densely populated borough that’s among the world’s major commercial,
+               At its core is Manhattan, a densely populated borough that&apos;s among the world&apos;s major commercial,
                financial and cultural centers. Its iconic sites include skyscrapers such as the Empire State Building
                and sprawling Central Park. Broadway theater is staged in neon-lit Times Square.</p>
         </section>
@@ -77,7 +77,7 @@
         <section class="sectionsSet">
             <h2 id="fifthP">SECTION 5</h2>
             <p>New York City comprises 5 boroughs sitting where the Hudson River meets the Atlantic Ocean.
-               At its core is Manhattan, a densely populated borough that’s among the world’s major commercial,
+               At its core is Manhattan, a densely populated borough that&apos;s among the world&apos;s major commercial,
                financial and cultural centers. Its iconic sites include skyscrapers such as the Empire State Building
                and sprawling Central Park. Broadway theater is staged in neon-lit Times Square.</p>
         </section>
