exercises git commit -m exercises

--- a/exercises/ex3/layout1.html
+++ b/exercises/ex3/layout1.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <title>layout1</title>
 </head>
@@ -11,7 +9,7 @@
         <header>
             <a href="index.html"></a>
         </header>
-        <nav id="navsecondfage">
+        <nav id="navsecondpage">
             <ul>
                 <li><a href="index.html" id="thislink">index</a></li>
                 <li><a href="layout1.html">layout1</a></li>
@@ -28,6 +26,6 @@
             </main> 
         </section>  
     </div>
-    <footer></footer>
+    <footer class="fixedFooter"></footer>
 </body>
 </html>
