--- a/exercises/ex3/index.html
+++ b/exercises/ex3/index.html
@@ -7,7 +7,7 @@
 <body>
     <div id="wrapper">
         <header>
-            <a href="index.html"></a>
+            <a class="logo" href="index.html"></a>
         </header>
         <section class="flexContainer">
             <main>
