--- a/exercises/ex3/layout2.html
+++ b/exercises/ex3/layout2.html
@@ -8,7 +8,8 @@
 <body>
     <div id="wrapper">
         <header>
-            <a href="index.html"></a>
+            <a class="logo" href="index.html"></a>
+            <a id="hamburger" href="#"></a>
         </header>
         <nav id="navThirdPg">
             <ul>
@@ -18,10 +19,8 @@
             </ul>
         </nav>
         <main id="lay2Main"></main>
-        <div class="flexMain2">
-        </div>
     </div>
-    <footer></footer>
+    <footer class="footer2"></footer>
     <script src="js/main.js"></script>
 </body>
 </html>
