--- a/exercises/ex4/index.html
+++ b/exercises/ex4/index.html
@@ -10,6 +10,7 @@
         <title>GOVERMENT</title>
     </head>
     <body>
+      <div>
         <section class="flag">
          <?xml version="1.0" encoding="UTF-8" standalone="no"?>
          <svg
